# Evolution-of-Todo

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
.claude/: settings.local.json
.claude/agents/: auth-agent.md  backend-engineer.md  database-engineer.md  frontend-engineer.md  integration-engineer.md  orchestrator-agent.md  task-create-agent.md
.claude/skills/nextjs/: skill.md
.specify/memory/: constitution.md
backend/: CLAUDE.md
frontend/: CLAUDE.md
history/prompts/: 0006-generate-phase-2-tasks-for-web-app.tasks.prompt.md  0007-implement-phase-2-foundation.implementation.prompt.md
phase1/: README.md  test_app.py
phase1/src/: cli.py  main.py  models.py  storage.py
phase2/backend/: requirements.txt
phase2/backend/src/: logging_config.py  main.py  pyproject.toml  setup.py
phase2/backend/src/api/: auth.py  tasks.py
phase2/backend/src/auth/: jwt_validator.py
phase2/backend/src/database/: connection.py  session.py
phase2/backend/src/models/: task.py  user.py
phase2/backend/src/schemas/: __init__.py  task.py  user.py
phase2/backend/src/services/: task_service.py
phase2/frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
specs/001-todo-app-cli/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-app-fullstack/: api.md  architecture.md  auth.md  authentication.md  components.md  database.md  features.md  frontend.md  non-functional.md  overview.md  personas.md  questions.md  rest-endpoints.md  risks.md  sp.plan.md  tasks.md  workflow.md
(+40 files in other folders)
